--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
 	<div align="center">
 		<br>
 		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big Friendly Button=================================</button>
-		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big BIG Friendly Button================================= <br> <br> <br> <br> <br> <br> </button>
 	</div>
+	<div align="center"> 
+		<br>
+		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big BIG Friendly Button================================= <br> <br> <br> <br> <br> <br> </button>
+		<br>
+	<\div>
 	</div>
 </body>
 </html>
