--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<div align="center"> 
 		<br>
-		<button onclick="window.location.href='https://mon.natsunori.com/status/stack';" class = "button is-primary" >=================================Big BIG Friendly Button================================= <br> <br> <br> <br> <br> <br> </button>
+		<button onclick="window.location.href='https://glance.natsunori.com';" class = "button is-primary" >=================================Big BIG Friendly Button=================================</button>
 		<br>
 	<\div>
 	</div>
