--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 		<br>
 		<button onclick="window.location.href='https://glance.natsunori.com';" class = "button is-primary" >=================================Big BIG Friendly Button=================================</button>
 		<br>
-	<\div>
+	</div>div>
 	</div>
 </body>
+<footer>
+  <p>Powered by</p>
+  <p><a href="mon.natsunori.com">NSNDEVENV</a></p>
+</footer>
 </html>
