--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: Grey;
+  color: white;
+}
+</style>
 	
 	<meta charset="UTF-8">
  	<meta name="description" content="A portfolio for all of my work including links to all social platforms and game profiles">
@@ -37,7 +45,7 @@
 		<br>
 		<button onclick="window.location.href='https://glance.natsunori.com';" class = "button is-primary" >=================================Big BIG Friendly Button=================================</button>
 		<br>
-	</div>div>
+	</div>
 	</div>
 </body>
 <footer>
