--- a/profiles.html
+++ b/profiles.html
@@ -10,7 +10,8 @@
      		 rel="stylesheet"
      		 href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     	/>
-	   
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3776575909417313"
+     crossorigin="anonymous"></script> 
    </head>
    <body style="background-color:black;">
       <button onclick="window.location.href='https://natsunori.github.io';" class = "button-is-primary" >
