--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ footer {
   background-color: Grey;
   color: white;
 }
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3776575909417313"
+     crossorigin="anonymous"></script>
 </style>
 	
 	<meta charset="UTF-8">
