--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-adsense-account" content="ca-pub-3776575909417313">
 <style>
 footer {
   text-align: center;
@@ -8,8 +9,7 @@ footer {
   background-color: Grey;
   color: white;
 }
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3776575909417313"
-     crossorigin="anonymous"></script>
+
 </style>
 	
 	<meta charset="UTF-8">
