--- a/profiles.html
+++ b/profiles.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
+	  <meta name="google-adsense-account" content="ca-pub-3776575909417313">
       <title>Natsunori</title>
       <link rel="shortcut icon" type="image/svg+xml" href="https://cdn.discordapp.com/avatars/630481836665208835/f547fde84915a88fc6cef709ef54acbb.png?size=4096"/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
